Resolve "Failing build due to inc check tests"